style: add scrollbar-gutter to prevent layout shift

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
+html {
+    scrollbar-gutter: stable both-edges;
+}
+
 html,
 body {
     height: 100%;
